gcc/testsuite/g++.dg/pth/system-include.cc
#include <stdlib.h>	// { dg-error "fatal" "invalid hunk" { xfail *-*-* } }
size_t X;
// { dg-error "excess errors" "" { xfail *-*-* } }
